Item repair functionality, including Trello api integration. Still need to add ability to update/close open repairs, but ui is in place.

--- a/Check_Out_App_ULC/Views/Shared/_Layout.cshtml
+++ b/Check_Out_App_ULC/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
 
     <title>@ViewBag.Title - URTC Checkout Program </title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
 
     <!--  date picker -->
