--- a/Check_Out_App_ULC/Views/Home/Index.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 col-lg-3 margin-top-20">
                     <a href="@Url.Action("Index", "tb_ItemRepair")" class="btn btn-primary btn-md btn-block">
-                        <span class="glyphicon glyphicon-signal"></span> Request Repairs
+                        <span class="glyphicon glyphicon-wrench"></span> Request Repairs
                     </a>
                 </div>
                 @if (SessionVariables.CurrentUser != null && SessionVariables.CurrentUser.ManagerRights.HasValue)
@@ -131,7 +131,7 @@
                 {
                     <div class="col-sm-6 col-md-4 col-lg-3 margin-top-20">
                         <a href="@Url.Action("Trello", "tb_ItemRepair")" class="btn btn-primary btn-md btn-block">
-                            <span class="glyphicon glyphicon-export"></span> Trello
+                            <span class="glyphicon glyphicon-question-sign"></span> Trello Testing
                         </a>
                     </div>
                 }
