--- a/Check_Out_App_ULC/Views/tb_ItemRepair/Trello.cshtml
+++ b/Check_Out_App_ULC/Views/tb_ItemRepair/Trello.cshtml
@@ -16,6 +16,26 @@
     <p style="font-size:24px"> <span>@ViewBag.Message</span></p>
 }
 
+
+
+
+
+
+
+
+@Html.ActionLink("Get Boards List", "GetBoards", "tb_ItemRepair")
+
+
+
+<br />
+
+
+
+
+
+
+
+
 <div style="border:12px; border-style:solid; border-color:#002db3; padding: 1em;">
     <p style="font-size:16px"><u>@Html.ActionLink("Get Boards List", "GetBoards", "tb_ItemRepair")</u></p>
     <br />
