can now check/uncheck repair checklist items

--- a/Check_Out_App_ULC/Views/tb_ItemRepair/Index.cshtml
+++ b/Check_Out_App_ULC/Views/tb_ItemRepair/Index.cshtml
@@ -94,7 +94,7 @@
                                 @foreach (var i in item.Checklist)
                                 {
                                     <li>
-                                        @if (@i.state == "complete")
+                                        @if (@i.state == true)
                                         {
                                             <span class="glyphicon glyphicon-check"></span>
                                         }
