--- a/Check_Out_App_ULC/Views/Home/Location.cshtml
+++ b/Check_Out_App_ULC/Views/Home/Location.cshtml
@@ -5,9 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Welcome! Please select your location:</h2>
+<h2>Welcome! Select your location:</h2>
 
 <select id="ddl" name="ddl" onchange="ChangeLocation(this.value);" onmousedown="this.value='';">
+    <option value="" disabled selected hidden>Please Choose...</option>
     <option value='BSB'>BSB</option>
     <option value='LSC'>LSC</option>
     <option value='TLT'>TLT</option>
