--- a/Check_Out_App_ULC/Views/tb_ItemRepair/UpdateRepair.cshtml
+++ b/Check_Out_App_ULC/Views/tb_ItemRepair/UpdateRepair.cshtml
@@ -18,7 +18,18 @@
 <button class="accordion">&nbsp Update or make changes to the repair checklist</button>
 <div class="panel">
     <br/>
-    <p>Edit checklist items here...</p>
+    @using (Html.BeginForm("UpdateChecklist", "tb_ItemRepair", FormMethod.Post))
+    {
+        for (var i = 0; i < Model.Checklist.Count(); i++)
+        {
+            @Html.CheckBoxFor(m => m.Checklist[i].state)
+            @Html.DisplayFor(m => m.Checklist[i].name)
+            <br/>
+        }
+        <br/>
+        <input type="hidden" name="upc" value=@Model.ItemUpc />
+        <input type="submit" value="Submit" />
+    }
 </div>
 
 <hr />
@@ -45,8 +56,7 @@
 <button class="accordion">&nbsp Close out this repair</button>
 <div class="panel">
     <br />
-    <p>Confirm that the repair has been completed</p>
-    <p>(Please note: This will mark any existing checklist items as complete, close the due date, and mark the repair request as closed.)</p>
+    <p>Confirm that the repair has been completed. (Note: This will mark any existing checklist items as complete, close the due date, and mark the repair request as closed.)</p>
     @using (Html.BeginForm("CloseRepair", "tb_ItemRepair", FormMethod.Post))
     {
         <div style="text-align: center;">
