added repairs summary to end of day report. also added ability to add update comments to open repairs.

--- a/Check_Out_App_ULC/Views/tb_ItemRepair/Index.cshtml
+++ b/Check_Out_App_ULC/Views/tb_ItemRepair/Index.cshtml
@@ -87,10 +87,17 @@
                             @Html.DisplayFor(modelItem => item.DueDate)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Comments)
+                            <ul style="list-style-type:none; padding-left: 0;">
+                                @foreach (var i in item.Comments)
+                                {
+                                    <li>
+                                        <p><span class="glyphicon glyphicon-comment"></span> &nbsp @i.text </p>
+                                    </li>
+                                }
+                            </ul>
                         </td>
                         <td>
-                            <ul style="list-style-type:none">
+                            <ul style="list-style-type:none; padding-left: 0;">
                                 @foreach (var i in item.Checklist)
                                 {
                                     <li>
